# tex_backend

./: .gitignore  pyproject.toml  requirements.txt  tex_build_master_prompt.md
scripts/: smoke_e2e.py
src/tex/: config.py  main.py
src/tex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tex/api/: routes.py  schemas.py
src/tex/commands/: activate_policy.py  calibrate_policy.py  evaluate_action.py  export_bundle.py  report_outcome.py
src/tex/deterministic/: gate.py  recognizers.py
src/tex/domain/: decision.py  evaluation.py  evidence.py  finding.py  outcome.py  policy.py  retrieval.py  severity.py  verdict.py
src/tex/engine/: pdp.py  router.py
src/tex/evidence/: chain.py  exporter.py  recorder.py
src/tex/learning/: calibrator.py  outcomes.py
src/tex/observability/: telemetry.py
src/tex/policies/: defaults.py
src/tex/retrieval/: orchestrator.py
src/tex/semantic/: analyzer.py  fallback.py  openai.py  prompt.py  schema.py
src/tex/specialists/: base.py  judges.py
src/tex/stores/: decision_store.py  entity_store.py  outcome_store.py  policy_store.py  precedent_store.py
tests/: conftest.py  factories.py  test_deterministic.py  test_outcomes.py  test_pdp.py  test_router.py
var/tex/evidence/: smoke_test.jsonl
var/tex/exports/: smoke_bundle.json  smoke_bundle_filtered.json
